syntax = "proto3";

option csharp_namespace = "CurrencyTracker.Finance.Grpc";

package finance;

// Сервис получения валют
service CurrencyService {
  rpc GetUserCurrencies (GetUserCurrenciesRequest) returns (GetUserCurrenciesResponse);
}

message GetUserCurrenciesRequest {
  int32 user_id = 1;
}

message GetUserCurrenciesResponse {
  message Currency {
    int32 id = 1;
    string name = 2;
    string code = 3;
    double rate = 4;
    int64 last_updated = 5; // Unix timestamp
  }

  message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int64 created_at = 4; // Unix timestamp
  }

  User user = 1;
  repeated Currency currencies = 2;
}